[tool.poetry]
name = "repl-nix-boilerplate-sea-level-predictor"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]
readme = "README.md"
packages = [{include = "repl_nix_boilerplate_sea_level_predictor"}]

[tool.poetry.dependencies]
python = "^3.10"
scipy = "^1.11.4"
matplotlib = "^3.8.2"
numpy = "^1.26.2"
pandas = "^2.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
